first homepage changes

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,6 @@
 <section id="home">
     <div class="welcome">
-        <p>Hi, and welcome to my portfolio!
-        <br>My name is </p>
+        <p>Always watered, never high maintenance.
         <p class="name">Oumayma Bennamoun.</p>
     </div>
 
