--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Oumayma Bennamoun</title>
+        <title>Forget Me Pot</title>
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="icon" type="image/x-icon" href="/images/logo.ico">
         <style>
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div>
-                <h1><a href="/#">oumayma</a></h1>
+                <h1><a href="/#">Forget Me Pot</a></h1>
             </div>
 
             <div id="star">✦</div>
