--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <section id="home">
     <div class="welcome">
         <p>Always watered, never high maintenance.
-        <p class="pot"></p>
+        <p class="pot"><img src="/images/logo.png" alt="Website logo" width ="200"></p>
     </div>
 
     <br>
