--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="icon" type="image/x-icon" href="/images/logo.ico">
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+            @@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
         </style>
     </head>
