--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="/css/styles.css">
         <link rel="icon" type="image/x-icon" href="/images/logo.ico">
         <style>
+            @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
         </style>
     </head>
     <body>
