--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,7 @@
         <link rel="icon" type="image/x-icon" href="/images/logo.ico">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
-        </style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');        </style>
     </head>
     <body>
         <header>
@@ -17,17 +16,30 @@
                 <h1><a href="/#">Forget Me Pot</a></h1>
             </div>
 
-            <div id="star">✦</div>
-            
             <div class="nav-container">
                 <nav>
                     <ul>
-                        <li><a href="/#">home</a></li>
                         <li><a href="/projects">projects</a></li>
                         <li><a href="/#contact">contact</a></li>
+                        <li><a href="/cart"><i class="ph ph-shopping-cart"></i></a></li>
                     </ul>
                 </nav>
             </div>
         </header>
+
+        <section class="hero">
+            <video autoplay muted loop playsinline>
+                <source src="/backgroundvideo.mp4" type="video/mp4">
+            </video>
+
+            <div class="hero-overlay">
+                <div class="hero-content">
+                    <h2>Forget Me Pot</h2>
+                    <p>Automated care for living spaces</p>
+                    <img src="/images/logo.png" alt="">
+                </div>
+            </div>
+        </section>
+
 
         <main>
